# BattagliaNavale

./: .gitignore  CMakeLists.txt  README.md  README.txt  admiral.h  bot.cpp  gameHandler.cpp  gameHandler.h  gameLoops.cpp
doc/Doxy/: Doxyfile.txt
doc/Doxy/html/: _r_e_a_d_m_e_8md.html  admiral_8cpp.html  admiral_8h.html  admiral_8h.js  admiral_8h_source.html  annotated.html  annotated_dup.js  battaglia__navale_8cpp.html  battaglia__navale_8cpp.js  bot_8cpp.html  bot_8h.html  bot_8h.js  bot_8h_source.html  class_bot-members.html  class_bot.html  class_bot.js  class_corazzata-members.html  class_corazzata.html  class_corazzata.js  class_game_handler-members.html  class_game_handler.html  class_game_handler.js  class_human_player-members.html  class_human_player.html  class_human_player.js  class_logger-members.html  class_logger.html  class_logger.js  class_nave_supporto-members.html  class_nave_supporto.html  class_nave_supporto.js  class_player-members.html  class_player.html  class_player.js  class_ricognitore-members.html  class_ricognitore.html  class_ricognitore.js  class_ship-members.html  class_ship.html  class_ship.js  (+95 more)
doc/Doxy/html/search/: all_1.js  (+67 more)
include/: admiral.h  bot.h  coord.h  corazzata.h  gameHandler.h  gameLoops.h  gameVars.h  humanPlayer.h  logger.h  naveSupporto.h  player.h  replayLoops.h  replayer.h  ricognitore.h  ship.h
libs/: CMakeLists.txt  bot.cpp  coord.cpp  gameHandler.cpp  gameLoops.cpp  humanPlayer.cpp
libs/game/: CMakeLists.txt  NaveSupporto.cpp  admiral.cpp  corazzata.cpp  gameHandler.cpp  gameLoops.cpp  naveSupporto.cpp  replayLoops.cpp  ricognitore.cpp  ship.cpp
libs/input/: CMakeLists.txt  bot.cpp  humanPlayer.cpp  logger.cpp  replayer.cpp
libs/input_output/: CMakeLists.txt  bot.cpp  humanPlayer.cpp  logger.cpp
libs/util/: CMakeLists.txt  coord.cpp
log_partite/: logPC.txt
log_partite_consegna/: INFO.txt  logCC.txt
src/: battaglia_navale.cpp  replay.cpp
